# CrossPost

./: README.md  TROUBLESHOOTING.md  bot.py  config.py  project_requirements.txt  pyproject.toml  replit.nix  restart.sh  run_as_daemon.sh  server.py  start.py  tg-community-bot.service  uwsgi.ini  uwsgi_simple.ini  web_server.py  wsgi.py
data/: channels.json  pending.json  schedule.json
handlers/: admin.py  channel.py
logs/: bot_started.txt  bot_starting.txt
static/css/: styles.css
static/js/: main.js
templates/: base.html  channel_detail.html  channel_form.html  channels.html  confirm_remove.html  index.html  manage_images.html  pending.html  pending_detail.html  schedule_form.html
utils/: crosspost.py  scheduler.py  storage.py
